# dropin

./: .gitignore  404.html  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYING  Cargo.toml  Examples.html  GettingStarted.html  Introduction.html  Makefile.toml  README.md  Roadmap.html  SECURITY.md  build.rs  codecov.yml  config.toml  index.html  rustfmt.toml  searchindex.js  searchindex.json  sitemap.xml
blueforest/models/dropin/core/v1/: Cargo.toml
blueforest/models/dropin/modules/v1/: Cargo.toml
cli/: Cargo.toml
cli/src/: lib.rs  main.rs
cli/tests/: main.rs
compiler/: Cargo.toml  README.md  rustfmt.toml
compiler/.sandbox/: Cargo.toml
compiler/.sandbox/crates/bootstrap/src/: expressions.rs  lib.rs  path.rs
compiler/.sandbox/crates/core/src/: lib.rs
compiler/.sandbox/crates/debugger/src/: main.rs
compiler/.sandbox/crates/utils/: Cargo.toml
compiler/.sandbox/crates/utils/src/: lib.rs  path.rs
compiler/.sandbox/etc/docs/: LICENSE-CODE
compiler/.sandbox/etc/docs/src/: Introduction.md
compiler/.sandbox/etc/sandbox/simple/: conversion.wat
compiler/.sandbox/src/: main.rs  utils.rs
compiler/.sandbox/src/embedder/: compile.rs  mod.rs
compiler/.sandbox/src/interactive/: cli_run.rs  config.rs  error.rs  mod.rs
compiler/.sandbox/src/interactive/model/: add.rs  compile.rs  mod.rs  run.rs  select.rs
compiler/.sandbox/src/interactive/owner/: add.rs  mod.rs  select.rs
compiler/.sandbox/src/interactive/path/: mod.rs  resolve.rs  validation.rs
compiler/.sandbox/src/interactive/recipe/: add.rs  concepts.rs  edit.rs  mod.rs  namespace.rs  select.rs
compiler/cli/: Cargo.toml
compiler/cli/src/: main.rs
compiler/common/: Cargo.toml
compiler/common/src/: lib.rs  token.rs
compiler/common/src/ir/: arithmetic.rs  comparison.rs  component.rs  control.rs  expression.rs  logic.rs  mod.rs  value.rs
compiler/crates/bootstrap/: Cargo.toml
compiler/crates/bootstrap/src/: path.rs
compiler/crates/debugger/: Cargo.toml
compiler/crates/utils/src/: path.rs
compiler/etc/docs/: LICENSE-CODE
compiler/etc/notes/: Development.md  README.md  Structure.md
compiler/etc/sandbox/: args.wat  memcopy.wat
compiler/parser/: Cargo.toml
compiler/parser-macros/: Cargo.toml
compiler/parser-macros/src/: alternatives.rs  concatenation.rs  first.rs  follow.rs  lib.rs  production.rs  rules.rs  table.rs  term.rs  token.rs
compiler/parser/lib/: Cargo.toml  build.rs
compiler/parser/lib/src/: bindings.rs  grammar.abnf  lexer.rs  lib.rs  token.rs
compiler/parser/macros/: Cargo.toml
compiler/parser/macros/src/: alternatives.rs  first.rs  follow.rs  lib.rs  rules.rs  table.rs  term.rs  token.rs
compiler/parser/src/: grammar.abnf  lexer.rs  lib.rs  main.rs  parser.rs  token.rs
compiler/parser/src/parser/: mod.rs  node.rs  non_terminal.rs  stack.rs  terminal.rs
compiler/parser/tests/: common.rs  integration_test.rs
compiler/parser/tests/lexer/: blocks.rs  comparisons.rs  groups.rs  mod.rs  multiline.rs  operators.rs
compiler/parser/tests/parser/: mod.rs
compiler/parser/tools/: Cargo.toml
compiler/parser/tools/src/: main.rs
compiler/parser/wasm/: Cargo.toml
compiler/parser/wasm/src/: lib.rs
compiler/recipes/: Cargo.toml  build.rs
compiler/recipes-macros/: Cargo.toml
compiler/recipes-macros/src/: alternatives.rs  concatenation.rs  first.rs  follow.rs  production.rs  table.rs  term.rs  token.rs
compiler/recipes/src/: lib.rs
compiler/recipes/src/ir/: arithmetics.rs  children.rs  comparisons.rs  components.rs  controls.rs  formats.rs  keys.rs  logics.rs  mod.rs  text.rs  value.rs  values.rs
compiler/recipes/src/parser/: component.rs  grammar.abnf  keys.rs  mod.rs  model.rs  text.rs  token.rs
compiler/src/: utils.rs
compiler/src/embedder/: compile.rs  mod.rs  run.rs
compiler/src/interactive/: cli_run.rs
compiler/src/interactive/model/: compile.rs  edit.rs  run.rs
compiler/src/interactive/owner/: add.rs  select.rs
compiler/src/interactive/recipe/: remove.rs  select.rs
compiler/target-dart/: Cargo.toml
compiler/target-macros/: Cargo.toml
compiler/target-macros/src/: lib.rs
compiler/target-typescript/: Cargo.toml
compiler/target-wasm/: Cargo.toml
compiler/targets/debug/: Cargo.toml
compiler/targets/debug/src/: lib.rs
compiler/targets/flutter/: Cargo.toml
compiler/targets/flutter/src/: component.rs  dependencies.rs  expression.rs  format.rs  formats.rs  imports.rs  keys.rs  lib.rs  listeners.rs  objects_getter.rs  properties_resolver.rs  setters.rs  setters_listeners.rs  stage.rs  stage0.rs  stage1.rs  updated_listeners.rs  visit.rs
compiler/targets/typescript/: Cargo.toml
compiler/targets/wasm/: Cargo.toml
crates/bootstrap/: Cargo.toml  build.rs
crates/bootstrap/src/: expressions.rs  lib.rs  main.rs  path.rs
crates/bootstrap/src/modules/: error.rs  mod.rs  value.rs
crates/bootstrap/src/syntaxes/: config.rs  error.rs  mod.rs
crates/bootstrap/src/sys/: args.rs  error.rs  mod.rs  rights.rs
crates/bootstrap/src/utils/: mod.rs
crates/bootstrap/tests/: common.rs  printers.rs
crates/debugger/: Cargo.toml
crates/debugger/src/: main.rs
crates/helpers/: Cargo.toml
crates/helpers/src/: error.rs  header.rs  io.rs  lib.rs
crates/helpers/src/fs/: mod.rs  path.rs  rights.rs
crates/modules/: Cargo.toml
crates/modules/src/: lib.rs
crates/pm/: Cargo.toml
crates/pm/src/: lib.rs  main.rs
crates/utils/: Cargo.toml
crates/utils/src/: lib.rs  path.rs
dropin-compiler/: Cargo.toml  build.rs
dropin-compiler/parser/: common.pest  handlers.pest  header.pest  keys.pest  types.pest
dropin-compiler/src/: collections.rs  issues.rs  lib.rs
dropin-compiler/src/functions/: mod.rs
dropin-compiler/src/parser/: functions.rs  mod.rs  types.rs  values.rs
dropin-compiler/src/refs/: bytes.rs  lists.rs  mod.rs  objects.rs  queries.rs  roots.rs  texts.rs
dropin-compiler/src/types/: mod.rs
dropin-syntaxes/: Cargo.toml
dropin-syntaxes/src/: main.rs  path.rs
dropin-syntaxes/src/expressions/: concat.rs  getter.rs  litteral.rs  mod.rs  quantifier.rs
dropin-utils/: Cargo.toml
old/crates/pm/: Cargo.toml
(+797 files in other folders)
