[workspace]
resolver = "2"
members = [
  "cli",
  "compiler/common",
  "compiler/parser",
  "compiler/parser-macros",
  "targets/dart",
  "targets/typescript",
  "targets/wasm",
]
exclude = [
  "recipes",
  "sandbox",
  "schemas",
  "scripts",
]

[workspace.package]
license = "AGPL-3.0-only"
homepage = "https://dropin.recipes"
authors = ["Nazim Lachter <nazim@blueforest.cc>", "Vulcain <vulcain@blueforest.cc>"]
edition = "2021"
