[workspace]
resolver = "2"
members = [
  "cli",
  "compiler/recipes-macros",
  "compiler/targets/flutter",
  "compiler/recipes",
  "compiler/common",
  # "compiler/targets/typescript",
  # "compiler/targets/wasm",
]
exclude = [
  "recipes",
  "sandbox",
  "schemas",
  "scripts",
]

[profile.wasm]
inherits = "release"
lto = true
opt-level = 's'
strip = "symbols"

[workspace.package]
license = "AGPL-3.0-only"
homepage = "https://dropin.recipes"
authors = ["Nazim Lachter <nazim@blueforest.cc>", "Vulcain <vulcain@blueforest.cc>"]
edition = "2021"
