[package]
name = "dropin"
version = "0.6.7-0"
description = "drop'in compiler - CLI tool for compiling drop'in recipes"
license.workspace = true
homepage.workspace = true
authors.workspace = true
edition.workspace = true

[features]
coverage = []

[dependencies]
dropin-compiler-recipes = { path = "../compiler/recipes" }
dropin-target-flutter = { path = "../compiler/targets/flutter" }

anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
prost = "0.12"
serde_yaml = "0.9"
