[workspace]
resolver = "2"
members = [
  "cli",
  "common",
  "parser",
  "parser-macros",
  "target-dart",
  "target-typescript",
  "target-wasm",
]

[workspace.package]
license = "AGPL-3.0-only"
homepage = "https://dropin.recipes"
authors = ["Nazim Lachter <nazim@blueforest.cc>", "Vulcain <vulcain@blueforest.cc>"]
edition = "2021"
