[package]
name = "dropin-compiler"
version = "0.5.3-1"
authors = ["Nazim Lachter <nazim@blueforest.cc>", "Vulcain <vulcain@blueforest.cc>"]
edition = "2021"
description = "drop'in WebAssembly compiler [WIP]"
repository = "https://github.com/theblueforest/dropin/dropin-compiler"
license = "AGPL-3.0-only"
keywords = ["WebAssembly"]

[dependencies]
wasm-ir = { git = "https://github.com/theblueforest/wasm-ir.git", branch = "develop" }
lazy_static = "1.4.0"
pest = "2.1.3"
pest_derive = "2.1.0"
termion = "1.5.6"
wasmtime = "0.34.1"
wasmtime-wasi = "0.34.1"
