[package]
name = "dropin-syntaxes"
version = "0.5.3-1"
authors = ["Nazim Lachter <nazim@blueforest.cc>", "Vulcain <vulcain@blueforest.cc>"]
edition = "2021"
description = "drop'in syntaxes [WIP]"
repository = "https://github.com/theblueforest/dropin/dropin-syntaxes"
license = "AGPL-3.0-only"

[dependencies]
dropin-utils = { path="../dropin-utils", version = "0.5.3-1" }
structopt = "0.3"

