[package]
name = "dropin-compiler-common"
version = "0.6.7-0"
description = "drop'in common library"
license.workspace = true
homepage.workspace = true
authors.workspace = true
edition.workspace = true

[features]
default = ["macros"]
macros = ["dep:quote", "dep:proc-macro2"]

[dependencies]
quote = { version = "1.0", optional = true }
proc-macro2 = { version = "1.0", optional = true }
