[package]
name = "dropin-parser-macros"
version = "0.6.7-0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
abnf = "0.13.0"
anyhow = "1.0"
dropin-common = { path = "../common" }
proc-macro2 = "1.0"
quote = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
syn = { version = "2.0", features = [ "full", "extra-traits" ] }
