[package]
name = "dropin-compiler-parser-macros"
version = "0.6.7-0"
description = "drop'in parser macros"
license.workspace = true
homepage.workspace = true
authors.workspace = true
edition.workspace = true

[lib]
proc-macro = true

[dependencies]
abnf = "0.13.0"
anyhow = "1.0"
dropin-compiler-common = { path = "../common", features = [ "macros" ] }
proc-macro2 = "1.0"
quote = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
syn = { version = "2.0", features = [ "full", "extra-traits" ] }
