[package]
name = "dropin-compiler-parser"
version = "0.6.7-0"
description = "drop'in parser"
license.workspace = true
homepage.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
dropin-compiler-common = { path = "../common" }
dropin-compiler-parser-macros = { path = "../parser-macros" }

[dev-dependencies]
indoc = "2.0"
