[package]
name = "dropin-bootstrap"
version = "0.5.3-8"
authors = ["Nazim Lachter <nazim@blueforest.cc>", "Vulcain <vulcain@blueforest.cc>"]
edition = "2021"
description = "drop'in bootstrap [WIP]"
repository = "https://github.com/theblueforest/dropin/crates/bootstrap"
license = "AGPL-3.0-only"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
dropin-core = { path="../core", version = "0.5.3-8" }
dropin-helpers = { path="../helpers", version = "0.5.3-8" }
annotate-snippets = "0.9"
wasi = "0.11"
wasm-encoder = "0.11"
