[package]
name = "dropin-debugger"
version = "0.5.3-8"
authors = ["Nazim Lachter <nazim@blueforest.cc>", "Vulcain <vulcain@blueforest.cc>"]
edition = "2021"
description = "drop'in debugger [WIP]"
repository = "https://github.com/theblueforest/dropin/crates/debugger"
license = "AGPL-3.0-only"

[dependencies]
dropin-utils = { path="../utils", version = "0.5.3-8" }
pretty-hex = "0.2.1"
structopt = "0.3"
wasmtime = "0.36.0"
wasmtime-wasi = "0.36.0"
