[package]
name = "dropin-modules"
version = "0.5.3-2"
authors = ["Nazim Lachter <nazim@blueforest.cc>", "Vulcain <vulcain@blueforest.cc>"]
edition = "2021"
description = "drop'in modules [WIP]"
repository = "https://github.com/theblueforest/dropin/crates/dropin-modules"
license = "AGPL-3.0-only"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasi = "0.11"
wee_alloc = "0.4"
