[package]
name = "dropin-pm"
version = "0.5.3-7"
authors = ["Nazim Lachter <nazim@blueforest.cc>", "Vulcain <vulcain@blueforest.cc>"]
edition = "2021"
description = "drop'in pm"
repository = "https://github.com/blue-forest/dropin/crates/pm"
license = "AGPL-3.0-only"

[dependencies]
dropin-utils = { path="../utils", version = "0.5.3-4" }
bytes = "1.1"
reqwest = { version = "0.11", features = [ "blocking" ] }
structopt = "0.3"
