[package]
name = "dropin-bootstrap"
version = "0.5.3-4"
authors = ["Nazim Lachter <nazim@blueforest.cc>", "Vulcain <vulcain@blueforest.cc>"]
edition = "2021"
description = "drop'in bootstrap [WIP]"
repository = "https://github.com/theblueforest/dropin/crates/bootstrap"
license = "AGPL-3.0-only"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
dropin-core = { path="../core", version = "0.5.3-4" }
wasi = "0.11.0"
wasm-encoder = "0.11.0"
