[package]
name = "dropin-compiler-parser-lib"
version = "0.6.7-0"
description = "drop'in parser lib"
license.workspace = true
homepage.workspace = true
authors.workspace = true
edition.workspace = true

[features]
coverage = []

[dependencies]
dropin-compiler-common = { path = "../../common" }
dropin-compiler-parser-macros = { path = "../macros" }

[dev-dependencies]
indoc = "2.0"
