[package]
name = "dropin-compiler-parser"
version = "0.6.7-0"
description = "drop'in parser"
license.workspace = true
homepage.workspace = true
authors.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
dropin-compiler-common = { path = "../../common" }
dropin-compiler-parser-lib = { path = "../lib" }

dlmalloc = { version = "0.2.6", features = ["global"] }
lazy_static = "1.4.0"
wasi = "0.12.0"
