[package]
name = "dropin-target-debug"
version = "0.1.0"
license.workspace = true
homepage.workspace = true
authors.workspace = true
edition.workspace = true

# [lib]
# crate-type = ["cdylib", "staticlib"]

[dependencies]
dropin-compiler-recipes = { path = "../../recipes" }

anyhow = "1.0"
dlmalloc = { version = "0.2.6", features = ["global"] }
lazy_static = "1.4.0"
prost = "0.12"
wasi = "0.12.0"
