[package]
name = "dropin-target-flutter"
version = "0.6.7-0"
description = "drop'in flutter code generation"
license.workspace = true
homepage.workspace = true
authors.workspace = true
edition.workspace = true

[features]
coverage = []

[dependencies]
dropin-compiler-recipes = { path = "../../recipes" }
dropin-target-macros = { path = "../../target-macros" }

anyhow = "1.0"
dlmalloc = { version = "0.2", features = [ "global" ] }
indoc = "2.0"
prost = "0.12"
