[package]
name = "dropin-core"
version = "0.5.3-8"
authors = ["Nazim Lachter <nazim@blueforest.cc>", "Vulcain <vulcain@blueforest.cc>"]
edition = "2021"
description = "drop'in core [WIP]"
repository = "https://github.com/theblueforest/dropin/crates/core"
license = "AGPL-3.0-only"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
strip = "symbols"

[dependencies]
wasi = "0.11"
wee_alloc = "0.4"
